--- a/public/html/index.html
+++ b/public/html/index.html
@@ -15,6 +15,10 @@
         </div>
         <div id='gltf-viewport'></div>
     </div>
+    <div id='greeting'>
+        <h1>Hello <span id='name'> </span></h1>
+
+    </div>
     
     <script src='main.js'></script>
 </body>
